display reviews correctly even on small screens

--- a/src/frontend/css/main.css
+++ b/src/frontend/css/main.css
@@ -61,3 +61,11 @@ span:lang(cn) {
   display: block;
   text-align: center;
 }
+
+.review {
+  max-width: calc(100vw - 60px);
+}
+
+.detail-view img {
+  max-width: 100%;
+}
